[metadata]
name = napari-growth-cone-finder
author = isabel mogollon
author_email = just.izza@hotmail.com
license = Apache Software License 2.0
url = https://github.com/isabellamermaid/napari-growth-cone-finder
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
project_urls =
    Bug Tracker = https://github.com/isabellamermaid/napari-growth-cone-finder/issues
    Documentation = 'https://github.com/isabellamermaid/napari-growth-cone-finder#README.md'
    Source Code = https://github.com/isabellamermaid/napari-growth-cone-finder
    User Support = https://github.com/isabellamermaid/napari-growth-cone-finder/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-growth-cone-finder = napari_growth_cone_finder
